Bug #13835 max key length is 1000 bytes when trying to create a fulltext index
Submitted: 7 Oct 2005 10:54 Modified: 2 Feb 2006 1:02
Reporter: Jorgen Norling Email Updates:
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.13, 5.0.15-rc-BK OS:Linux (Linux)
Assigned to: Sergey Vojtovich Target Version:

[7 Oct 2005 10:54] Jorgen Norling
Description:
Gets the error message ERROR 1071 (42000): Specified key was too long; max key length is
1000 bytes when trying to create a fulltext index on a varchar column with a length more
than 1000/3 bytes (utf8).

mysql> create table fulltext_test(
    ->  id integer
    -> ,fulltext_string varchar(10000)
    -> ,fulltext index ftx1(fulltext_string)
    -> );
ERROR 1071 (42000): Specified key was too long; max key length is 1000 bytes

How to repeat:
mysql> create table fulltext_test(
    ->  id integer
    -> ,fulltext_string varchar(10000)
    -> ,fulltext index ftx1(fulltext_string)
    -> );
[7 Oct 2005 12:07] Valeriy Kravchuk
mysql> use test;
Reading table information for completion of table and column names
You can turn off this feature to get a quicker startup with -A

Database changed
mysql> create table fulltext_test(
    ->   id integer,
    ->   fulltext_string varchar(10000),
    ->   fulltext index ftx1(fulltext_string));
ERROR 1071 (42000): Specified key was too long; max key length is 1000 bytes
mysql> select version();
+-----------+
| version() |
+-----------+
| 5.0.15-rc |
+-----------+
1 row in set (0,00 sec)

I had not found any such key size restrictions in the manual
(http://dev.mysql.com/doc/mysql/en/fulltext-restrictions.html,
http://dev.mysql.com/doc/mysql/en/create-index.html, etc). So, it lloks like a bug or
documentation request, if it is intended behaviour.
[8 Oct 2005 15:58] Sergei Golubchik
A bug. fulltext keys don't have such a limit
[4 Nov 2005 8:05] Philip Stoev
I believe this bug is a "show stopper" and needs to have it priority elevated. stll
present in Distrib 5.0.15.
[11 Jan 2006 10:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/900
[13 Jan 2006 17:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/1043
[13 Jan 2006 18:28] Sergey Vojtovich
Fixed in 5.0.19.
[2 Feb 2006 1:02] Mike Hillyer
Documented in 5.0.19 changelog:

      <listitem>
        <para>
          Attempts to create FULLTEXT indexes on VARCHAR columns larger
          than 1000 bytes resulted in error. (Bug #13835)
        </para>
      </listitem>