BUG#13835: max key length is 1000 bytes when trying to create a fulltext index Allow fulltext index on VARCHAR columns longer than max key length.

mysql-test/r/fulltext.result:
  A test case for BUG#13835 added.
mysql-test/t/fulltext.test:
  A test case for BUG#13835 added.
sql/sql_table.cc:
  Allow fulltext index on VARCHAR columns longer than max key length.