sql/sql_table.cc
@@ -1296,7 +1296,7 @@ static int mysql_prepare_table(THD *thd, HA_CREATE_INFO *create_info,
 	my_error(ER_WRONG_KEY_COLUMN, MYF(0), column->field_name);
 	  DBUG_RETURN(-1);
       }
-      if (length > file->max_key_part_length())
+      if (length > file->max_key_part_length() && key->type != Key::FULLTEXT)
       {
 	length=file->max_key_part_length();
 	if (key->type == Key::MULTIPLE)
